--- a/src/App.css
+++ b/src/App.css
@@ -1,78 +1,38 @@
-*{
-  margin: 0;
-  padding: 0;
-  font-family: "Century Gothic";
+.App {
+  text-align: center;
 }
 
-header{
-  background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-ul{
-  float: right;
-  list-style-type: none;
-  margin-top: 25px;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
-ul li{
-  display: inline-block;
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-ul li a{
-  text-decoration: none;
-  color: #fff;
-  padding: 5px 20px;
-  border: 1px solid transparent;
-  transition: 0.6s ease;
+.App-link {
+  color: #61dafb;
 }
 
-ul li a:hover{
-  background-color: #fff;
-  color: #000;
-}
-
-.logo img{
-  float: left;
-  width: 150px;
-  height: auto;
-}
-
-.main{
-  max-height: 1200px;
-  margin: auto;
-}
-
-.title{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-}
-
-.title h1{
-  color: snow;
-  font-size: 150px;
-}
-
-.button{
-  position: absolute;
-  top: 62%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-}
-
-.btn{
-  border: 1px solid #fff;
-  padding: 10px 30px;
-  color: #fff;
-  text-decoration: none;
-  transition: 0.6s ease;
-}
-
-.btn:hover{
-  background-color: #fff;
-  color: #000;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
